# core

./: .clang-format  .cmake-format.yaml  .envrc  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTOR_LICENSE_AGREEMENT.md  ChangeLog.md  Dockerfile  README.md  SECURITY.md  benchmark.sh  benchmark_container.sh  benchmark_host.sh  docker-compose-integration.yml  docker-compose.yml  docker-swarm.yml  foundationdb.conf  integration.sh  main.cpp  mk_cmake.py  node-exporter.sh  prometheus.yml  test_write_cache.py  usage_scenario.yml  wait_for_benchmark.py
client-fuse/: CMakeLists.txt  config.hpp.in
client-fuse/cmake/: FindFUSE.cmake
client-fuse/src/: context.cpp  context.h  exception.h  fuse_f_meta_data.cpp  fuse_f_meta_data.h  fuse_operations.cpp  fuse_operations.h  fuse_ts_container.cpp  fuse_ts_container.h  main.cpp  thread_safe_type.h  utils.cpp  utils.h
client-shell/: .gitignore  CMakeLists.txt  Dockerfile.ubuntu1804  start.sh
client-shell/src/: config.h  job_queue.h  main.cpp  project_config.h  recomp_tree.h
client-shell/test/: testDummy.cpp  test_recomp_tree.cpp  test_traverse.cpp
cluster/: CMakeLists.txt  main.cpp
cluster/src/: big_int.h  client.h  cluster_config.h  cluster_map.h  common.cpp  common.h  data_node.cpp  data_node.h  data_store.cpp  data_store.h  dedupe_job.h  dummy.cpp  entry_job.cpp  entry_job.h  free_spot_manager.cpp  free_spot_manager.h  global_data.h  growing_plain_storage.h  index_mem_structures.h  messenger.h  ospan.h  paged_redblack_tree.h  phonebook_job.h  redupe_job.h  server.h  set_comparator_traits.h
cluster/test/: cluster_fixture.h  global_data_view_fixture.h  test_chaining_data_store.cpp  test_data_store.cpp  test_data_store.cpp_  test_dedupe_write_cache.cpp  test_directory_store.cpp  test_ec.cpp  test_fdb_serialization.cpp  test_global_data.cpp  test_global_data.cpp_  test_key_logger.cpp  test_read_cache.cpp  test_serialization.cpp  test_transaction_log.cpp
cmake/testing/: CMakeLists.txt
experiments/: CMakeLists.txt  dedupe_dumb_scale.cpp  dedupe_prefix_isolate_scale.cpp  dedupe_prefix_scale.cpp  index_results.txt  results  rocksdb.cpp  sqlite.cpp
lib/: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/.run/: uhLibTrees_allTests.run.xml  uhLibTrees_get_info_set_time_test.run.xml  uhLibTrees_index_read_test.run.xml  uhLibTrees_test_storage.run.xml  uhLibTrees_write_read_base_test.run.xml
lib/chunking/: CMakeLists.txt  buffer.cpp  buffer.h  chunker.h  fast_cdc.cpp  fast_cdc.h  fixed_size_chunker.cpp  fixed_size_chunker.h  gear.cpp  gear.h  gear_random.inc  mod.cpp  mod.h  mod_chunker.cpp  mod_chunker.h  rabin_fingerprints_chunker.cpp  rabin_fingerprints_chunker.h  rabin_fp.cpp  rabin_fp.h  rabin_polynomial.c  rabin_polynomial.h  rabin_polynomial_constants.h
lib/client/: CMakeLists.txt  download.cpp  download.h  f_download.cpp  f_download.h  f_traverse.cpp  f_traverse.h  f_upload.cpp  f_upload.h  recomp_tree.h  thread_manager.cpp  thread_manager.h  traverse.cpp  traverse.h  upload.cpp  upload.h
lib/compression/: CMakeLists.txt  brotli.cpp  brotli.h  compression.cpp  compression.h  none.cpp  none.h  type.cpp  type.h
lib/conceptTypes/: conceptTypes.h
lib/dbSupport/: CMakeLists.txt  config_files.cpp  config_files.h  database_call_ops.h  postgresSQL.cpp  postgresSQL.h
lib/fdb/: CMakeLists.txt  fdb.cpp  fdb.h
lib/hash/: CMakeLists.txt  sha512.cpp  sha512.h
lib/io/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_generator.cpp  buffer_generator.h  buffered_device.h  chunk_collection.cpp  chunk_collection.h  chunk_collection_index_persistence.cpp  chunk_collection_index_persistence.h  chunk_collection_index_persistent.cpp  chunk_collection_index_persistent.h  data_generator.cpp  data_generator.h  device.cpp  device.h  device_generator.cpp  device_generator.h  file.cpp  file.h  fragment.cpp  fragment.h  fragment_device.cpp  fragment_device.h  fragment_on_device.cpp  fragment_on_device.h  fragment_on_seekable_device.cpp  fragment_on_seekable_device.h  fragment_on_seekable_reset_device.cpp  fragment_on_seekable_reset_device.h  fragment_on_seekable_reset_front_device.cpp  fragment_on_seekable_reset_front_device.h  fragment_seekable_device.cpp  fragment_seekable_device.h  fragmented_device.cpp  fragmented_device.h  group_generator.cpp  group_generator.h  mem_device.cpp  mem_device.h  (+17 more)
lib/licensing/: CMakeLists.txt  backend.h  check_airgap_license.cpp  check_airgap_license.h  check_airgapped_timed_license.cpp  check_airgapped_timed_license.h  check_key_license.cpp  check_key_license.h  check_license.cpp  check_license.h  check_timed.h  (+25 more)
profiling/: CMakeLists.txt  profile_deduplicator.cpp
server-db/: CMakeLists.txt  Dockerfile  Dockerfile.ubuntu1804  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  docker_build.sh  start.sh
src/: CMakeLists.txt  config.h.in  main.cpp  shared.cpp
test/: CMakeLists.txt  cluster_fixture.h  entrypoint.cpp  entrypoint.h  gdv_fixture.h  http_request.cpp  http_request.h  testRunner.cpp  test_address.cpp  test_awaitable_promise.cpp  test_big_int.cpp  test_bucket.cpp  test_chaining_data_store.cpp  test_config.h.in  test_data_store.cpp  test_data_store_mock.cpp  test_dedupe_write_cache.cpp  test_deduplicator.cpp  test_directory_store.cpp  test_ec.cpp  test_etcd.cpp  test_etcd_manager.cpp  test_etcd_manager_on_client_failure.cpp  test_etcd_manager_on_etcd_failure.cpp  test_fake_data_store.cpp  test_formats.cpp  test_fragment_set.cpp  test_free_spot_manager.cpp  test_global_data_view.cpp  test_hash.cpp  test_license.cpp  test_lru_cache.cpp  test_md5.cpp  test_mock_data_store.cpp  test_plain_cache.cpp  test_pointer_traits.cpp  test_policies.cpp  test_policies_with_action.cpp  test_policies_with_condition.cpp  test_policies_with_examples.cpp  (+12 more)
testing/: CMakeLists.txt  Dockerfile  README.md  TestRunner.Dockerfile  TestRunner.entrypoint.sh  activate  config  docker-compose.yml  docker-compose.yml.in  pytest.ini  python-requirements.txt  requirements.txt  start-e2e.sh  start-e2e.sh.in  test_services.sh
tools/: CMakeLists.txt  analyze_refcount_log.py  dedupe_stats.py
(+2244 files in other folders)
